; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/gadget/udc/extr_renesas_usb3.c_renesas_usb3_debugfs_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/gadget/udc/extr_renesas_usb3.c_renesas_usb3_debugfs_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.renesas_usb3 = type { i32 }
%struct.device = type { i32 }

@.str = private unnamed_addr constant [9 x i8] c"b_device\00", align 1
@renesas_usb3_b_device_fops = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.renesas_usb3*, %struct.device*)* @renesas_usb3_debugfs_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @renesas_usb3_debugfs_init(%struct.renesas_usb3* %0, %struct.device* %1) #0 {
  %3 = alloca %struct.renesas_usb3*, align 8
  %4 = alloca %struct.device*, align 8
  store %struct.renesas_usb3* %0, %struct.renesas_usb3** %3, align 8
  store %struct.device* %1, %struct.device** %4, align 8
  %5 = load %struct.device*, %struct.device** %4, align 8
  %6 = call i32 @dev_name(%struct.device* %5)
  %7 = call i32 @debugfs_create_dir(i32 %6, i32* null)
  %8 = load %struct.renesas_usb3*, %struct.renesas_usb3** %3, align 8
  %9 = getelementptr inbounds %struct.renesas_usb3, %struct.renesas_usb3* %8, i32 0, i32 0
  store i32 %7, i32* %9, align 4
  %10 = load %struct.renesas_usb3*, %struct.renesas_usb3** %3, align 8
  %11 = getelementptr inbounds %struct.renesas_usb3, %struct.renesas_usb3* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.renesas_usb3*, %struct.renesas_usb3** %3, align 8
  %14 = call i32 @debugfs_create_file(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 420, i32 %12, %struct.renesas_usb3* %13, i32* @renesas_usb3_b_device_fops)
  ret void
}

declare dso_local i32 @debugfs_create_dir(i32, i32*) #1

declare dso_local i32 @dev_name(%struct.device*) #1

declare dso_local i32 @debugfs_create_file(i8*, i32, i32, %struct.renesas_usb3*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
